--- a/templates/messaging/index.html.twig
+++ b/templates/messaging/index.html.twig
@@ -35,7 +35,7 @@
                             <img src=
                                 {% if conversation.u_avatar is empty %}
                                     "{{ asset('img/library/defaultAvatar.png') }}"
-                                {% elseif result.avatar starts with 'https:' %}
+                                {% elseif conversation.u_avatar starts with 'https:' %}
                                     "{{ conversation.u_avatar }}"
                                 {% else %}
                                     "{{ asset('/uploads/avatars/' ~ conversation.u_avatar) }}"
