--- a/templates/messaging/index.html.twig
+++ b/templates/messaging/index.html.twig
@@ -70,11 +70,10 @@
                                 &bull;&bull;&bull;
                             </button>
                             <div class="dropdown-menu dropdown-menu-right">
-                                <button class="dropdown-item dropdown-item-action btn-del-discussion" id="SHO_" data-token="{{ csrf_token('tok') }}" data-toggle="modal" data-target="#deleteDiscussionModal">
-                                    Supprimer la conversation
+                                <button class="dropdown-item dropdown-item-action btn-del-discussion" id="DEL_" data-token="{{ csrf_token('tok') }}" data-toggle="modal" data-target="#deleteDiscussionModal">
+                                    {{ 'delete.discussion'|trans|raw }}
                                 </button>
-                                <button class="dropdown-item dropdown-item-action" id="DEL_" data-token="{{ csrf_token('tok') }}"
-                                    href="#">Voir le profil de 
+                                <button class="dropdown-item dropdown-item-action" id="show_profile" href="#">{{ 'show.profile'|trans|raw }}
                                 </button>
                             </div>
                         </div>
@@ -102,7 +101,8 @@
             </div>
         </div>
     </div>
-    <input type="hidden" id="datapage" data-userid = "{{ app.user.id }}" data-locale = "{{ app.request.locale }}" data-you = "{{ 'generic.you'|trans|raw }}">
+    <input type="hidden" id="datapage" data-userid = "{{ app.user.id }}" data-locale = "{{ app.request.locale }}" data-you = "{{ 'generic.you'|trans|raw }}"
+        data-showprofile = "{{ 'show.profile'|trans|raw }}">
     <input type="hidden" id="msgerr" data-errone = "{{ 'json.msg.error_1'|trans|raw }}"
     data-errtwo = "{{ 'json.msg.error_2'|trans|raw }}">
 {% endblock %}
