--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -34,5 +34,6 @@
 {% block javascripts %}
     {{ parent() }}
     {{ encore_entry_script_tags('js/notificationToastr') }}
+    {{ encore_entry_script_tags('js/adaptFooter') }}
     {{ encore_entry_script_tags('js/listProfile') }}
 {% endblock %}
