--- a/templates/profile/showProfile.html.twig
+++ b/templates/profile/showProfile.html.twig
@@ -132,6 +132,9 @@
             </div>
         </div>
     </div>
+    {# for datapicker customization #}
+    <input type="hidden" id="language" data-lang = "{{ app.request.locale }}">
+
 {% endblock %}
 
 {% block javascripts %}
